fixed font spacing

--- a/src/pages/About/starwars/starwarsintro.css
+++ b/src/pages/About/starwars/starwarsintro.css
@@ -55,7 +55,7 @@ Version: 1.0
   /* font-size: 80px; */
   font-size: 2rem;
   font-weight: bold;
-  text-align: justify;
+  text-align: center;
   overflow: hidden;
   transform-origin: 50% 100%;
   transform: perspective(350px) rotateX(25deg);
